Bug 1184790 - Force notifications to have opacity:1 when hovered to make sure that we show a readable notification during the intro/exit animation of the notification if the user has their mouse in the area. r=MattN
MozReview-Commit-ID: DccStz4VXCQ

UltraBlame original commit: 5ac7de63360948e4e7979ad483a2214e2c3fd472

--- a/toolkit/themes/shared/alert-common.css
+++ b/toolkit/themes/shared/alert-common.css
@@ -124,6 +124,35 @@ closing
 animation
 ;
 }
+#
+alertBox
+[
+animate
+]
+:
+not
+(
+[
+clicked
+]
+)
+:
+not
+(
+[
+closing
+]
+)
+:
+hover
+{
+opacity
+:
+1
+!
+important
+;
+}
 keyframes
 alert
 -
